--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "kleur": "^4.1.5",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   },
   "name": "employeemanager-server",
