fetching  data from db, using axios; client application

--- a/clientapp/android/settings.gradle
+++ b/clientapp/android/settings.gradle
@@ -44,7 +44,7 @@ if (getRNMinorVersion() >= 75) {
   }
 }
 
-rootProject.name = 'clientapp'
+rootProject.name = 'easy-erp'
 
 dependencyResolutionManagement {
   versionCatalogs {
