--- a/clientapp/ios/easyerp.xcodeproj/xcshareddata/xcschemes/easyerp.xcscheme
+++ b/clientapp/ios/easyerp.xcodeproj/xcshareddata/xcschemes/easyerp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "clientapp.app"
-               BlueprintName = "clientapp"
-               ReferencedContainer = "container:clientapp.xcodeproj">
+               BuildableName = "easyerp.app"
+               BlueprintName = "easyerp"
+               ReferencedContainer = "container:easyerp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "clientappTests.xctest"
-               BlueprintName = "clientappTests"
-               ReferencedContainer = "container:clientapp.xcodeproj">
+               BuildableName = "easyerpTests.xctest"
+               BlueprintName = "easyerpTests"
+               ReferencedContainer = "container:easyerp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "clientapp.app"
-            BlueprintName = "clientapp"
-            ReferencedContainer = "container:clientapp.xcodeproj">
+            BuildableName = "easyerp.app"
+            BlueprintName = "easyerp"
+            ReferencedContainer = "container:easyerp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "clientapp.app"
-            BlueprintName = "clientapp"
-            ReferencedContainer = "container:clientapp.xcodeproj">
+            BuildableName = "easyerp.app"
+            BlueprintName = "easyerp"
+            ReferencedContainer = "container:easyerp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
