--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "cli-color": "^2.0.4",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-openid-connect": "^2.17.1",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
     "kleur": "^4.1.5",
