--- a/clientapp/app.json
+++ b/clientapp/app.json
@@ -35,6 +35,13 @@
         {
           "fonts": ["./assets/fonts/SpaceMono-Regular.ttf"]
         }
+      ],
+      [
+        "react-native-auth0",
+        {
+          "domain": "dev-e7uxuudwsqqup47u.us.auth0.com",
+          "clientId": "YOUR_AUTH0_CLIENT_ID"
+        }
       ]
     ],
     "experiments": {
