--- a/clientapp/ios/easyerp/Info.plist
+++ b/clientapp/ios/easyerp/Info.plist
@@ -31,6 +31,14 @@
           <string>com.kevinroan.erpsoftware</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLName</key>
+        <string>auth0</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.kevinroan.erpsoftware.auth0</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
