--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
