--- a/clientapp/app.json
+++ b/clientapp/app.json
@@ -33,16 +33,14 @@
       [
         "expo-font",
         {
-          "fonts": [
-            "./assets/fonts/SpaceMono-Regular.ttf"
-          ]
+          "fonts": ["./assets/fonts/SpaceMono-Regular.ttf"]
         }
       ],
       [
         "react-native-auth0",
         {
           "domain": "dev-e7uxuudwsqqup47u.us.auth0.com",
-          "clientId": "YOUR_AUTH0_CLIENT_ID"
+          "clientId": "oW2hpDaZPHvlW0ZIMHNT13Jz7wLqtfBT"
         }
       ],
       "expo-secure-store"
