--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -21,6 +21,7 @@
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
     "expo-blur": "~13.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
