--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,19 @@
     "cli-color": "^2.0.4",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "express-openid-connect": "^2.17.1",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
+    "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-client": "^2.0.4",
     "kleur": "^4.1.5",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "request": "^2.88.2"
   },
   "name": "employeemanager-server",
   "version": "1.0.0",
