--- a/clientapp/ios/easyerp/Info.plist
+++ b/clientapp/ios/easyerp/Info.plist
@@ -31,14 +31,6 @@
           <string>com.kevinroan.erpsoftware</string>
         </array>
       </dict>
-      <dict>
-        <key>CFBundleURLName</key>
-        <string>auth0</string>
-        <key>CFBundleURLSchemes</key>
-        <array>
-          <string>com.kevinroan.erpsoftware.auth0</string>
-        </array>
-      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
@@ -55,6 +47,7 @@
     <string>Allow $(PRODUCT_NAME) to access your Face ID biometric data.</string>
     <key>NSUserActivityTypes</key>
     <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
     </array>
     <key>UIAppFonts</key>
