refactor:app.json

--- a/clientapp/android/app/build.gradle
+++ b/clientapp/android/app/build.gradle
@@ -111,8 +111,8 @@ android {
 
     namespace 'com.kevinroan.erpsoftware'
     defaultConfig {
-// @generated begin react-native-auth0-manifest-placeholder - expo prebuild (DO NOT MODIFY) sync-6a6a61b93a8981e2ddedd33c0e5b576e7da23e3c
-manifestPlaceholders = [auth0Domain: "dev-e7uxuudwsqqup47u.us.auth0.com", auth0Scheme: "erpsoftware"]
+// @generated begin react-native-auth0-manifest-placeholder - expo prebuild (DO NOT MODIFY) sync-102fbb750c05e07d32017aa087890d6f252f266c
+manifestPlaceholders = [auth0Domain: "dev-e7uxuudwsqqup47u.us.auth0.com", auth0Scheme: "com.kevinroan.erpsoftware.auth0"]
 // @generated end react-native-auth0-manifest-placeholder
         applicationId 'com.kevinroan.erpsoftware'
         minSdkVersion rootProject.ext.minSdkVersion
