--- a/clientapp/ios/easyerp/Info.plist
+++ b/clientapp/ios/easyerp/Info.plist
@@ -27,7 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>erpsoftware</string>
+          <string>com.kevinroan.erpsoftware.auth0</string>
           <string>com.kevinroan.erpsoftware</string>
         </array>
       </dict>
@@ -47,7 +47,6 @@
     <string>Allow $(PRODUCT_NAME) to access your Face ID biometric data.</string>
     <key>NSUserActivityTypes</key>
     <array>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
     </array>
     <key>UIAppFonts</key>
