--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "redis": "^4.7.0",
     "request": "^2.88.2"
   },
   "name": "employeemanager-server",
