fix; authentication issues, oidc breaking change on latest version

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,13 @@
     "chalk": "^5.3.0",
     "cli-color": "^2.0.4",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
-    "express-openid-connect": "^0.5.0",
+    "express-openid-connect": "^2.18.1",
+    "express-session": "^1.18.1",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
+    "joi": "^17.13.3",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "jwks-client": "^2.0.4",
