--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/app.js",
+    "dev": "node src/app.js"
   },
   "keywords": [],
   "author": "kevinroan",
